--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <nav>
-        <img src="./assets/icons/icon_menu.svg " alt="menu" class="menu">
+        <img src="./assets/icons/icon_menu.svg " alt="menu" class="menuHamIcon">
 
         <div class="navbar-left">
 
@@ -48,6 +48,50 @@
                 </li>
                 <li>
                     <a href="/" class="title">Sign Out</a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="mobile-menu inactive">
+            <ul>
+                <li>
+                    <a href="/" class="title">CATEGORIES</a>
+                </li>
+                <li>
+                    <a href="/" class="title">All</a>
+                </li>
+                <li>
+                    <a href="/" class="title">Clothes</a>
+                </li>
+                <li>
+                    <a href="/" class="title">Electronics</a>
+                </li>
+                <li>
+                    <a href="/" class="title">Furnitures</a>
+                </li>
+                <li>
+                    <a href="/" class="title">Toys</a>
+                </li>
+                <li>
+                    <a href="/" class="title">Others</a>
+                </li>         
+            </ul>
+    
+            <ul>
+                <li>
+                    <a href="/" class="title">My orders</a>
+                </li>
+                <li>
+                    <a href="/" class="title">My account</a>
+                </li>
+            </ul>
+    
+            <ul>
+                <li>
+                    <a href="/" class="email">example@example.com</a>
+                </li>
+                <li>
+                    <a href="/" class="sign-out">Sign Out</a>
                 </li>
             </ul>
         </div>
